1回目のコミット

--- a/templates/comment/index.html
+++ b/templates/comment/index.html
@@ -1,1 +1,22 @@
-
+{% extends "layouts/default.html" %}
+ 
+{% block title %}{{ title }}{% endblock %}
+ 
+{% block content %}
+    {% include "includes/logged_in_header.html" %}
+    <h1>{{ title }}</h1>
+    <p>
+        <a href="/comment/message_create/">新規投稿</a>
+    </p>
+    <ul>
+        {% for message in messages %}
+            <li>
+                <a href="/comment/message_detail/{{ message.id }}">
+                   {{ message.created_at }} {{ message.name }}: {{ message.body }} 
+                </a>
+            </li>
+        {% empty %}
+            <li>メッセージはありません。</li>
+        {% endfor %}
+    </ul>
+{% endblock %}
